--- a/index4.html
+++ b/index4.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Болдеринг</title>
-        <link rel="shylesheet" href="style4.css">
+        <link rel="stylesheet" href="style4.css">
     </head>
     <body>
         <header>
