--- a/index6.html
+++ b/index6.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Самойлов и Ко</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style6.css">
     </head>
     <body>
         <header>
